03-aplikasi.yml
apiVersion: v1
kind: Service
metadata:
  name: assetinv-service
spec:
  type: LoadBalancer
  selector:
    app: assetinv
    tier: aplikasi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetinv-deployment
  labels:
    app: assetinv
    tier: aplikasi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetinv
      tier: aplikasi
  template:
    metadata:
      labels:
        app: assetinv
        tier: aplikasi
    spec:
      containers:
      - name: assetinv
        image: sudarsonohadisaputra/asset-inv:saas-v4
        ports:
        - containerPort: 80
