04-aplikasi-php.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
    tier: aplikasi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    tier: aplikasi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      tier: aplikasi
  template:
    metadata:
      labels:
        app: nginx
        tier: aplikasi
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            memory: "32Mi"
            cpu: "200m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
