05-aplikasi-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: assetinv2-service
spec:
  type: ClusterIP
  selector:
    app: assetinv-ingress
    tier: aplikasi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetinv2-deployment
  labels:
    app: assetinv-ingress
    tier: aplikasi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetinv-ingress
      tier: aplikasi
  template:
    metadata:
      labels:
        app: assetinv-ingress
        tier: aplikasi
    spec:
      containers:
      - name: assetinv-ingress
        image: sudarsonohadisaputra/asset-inv:saas-v29
        ports:
        - containerPort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - asset.solubis.co.id
      secretName: letsencrypt
  rules:
    - host: asset.solubis.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assetinv2-service
                port:
                  number: 80
